# cuda-benchmark

./: .clang-format  CMakeLists.txt  README.md  format.py  gemm_benchmark.cu
gemm/: CMakeLists.txt  gemm-bf16.cu  gemm-common.h  gemm-cublas.cu  gemm-cublas.h  gemm-cublaslt.h  gemm-cudnn.h  gemm-cutlass.h  gemm-fp16.cu  gemm-fp32.cu  gemm-int8-fp32.cu  gemm-int8-int32.cu  gemm-tensorllm.h  gemm-tensorrt.h  gemm-test.cu  gemm.cu  gemm.h  range-test.py  test-ans-int8-int32.cu
include/: argparse.hpp  helper_cuda.h
